--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -79,6 +79,16 @@ html {
     background-color: lightgray;
 }
 
+.post_table {
+    width: 100%;
+}
+
+.caption {
+    font-size: 14px;
+    font-weight: bold;
+    margin: 10px;
+}
+
 #search_box {
     margin: 0px 10px;
     width: 300px;
@@ -101,4 +111,90 @@ html {
 
 #reply_bot_line {
     border: 1px dotted black;
+}
+
+.post_table {
+    text-align: left;
+    vertical-align: center;
+
+    border-collapse: collapse;
+    border-top: 1px solid #c9c9c9;
+}
+
+.post_table tbody th, .post_table tbody td {
+    font-size: 15px;
+
+    padding: 10px 15px;
+    color: #333;
+    background: #ececec;
+    border-bottom: 1px solid #c9c9c9;
+}
+
+.post_table tbody td {
+    background: #fafafa;
+}
+
+/* textbox_style */
+input.tbox01 {
+    width: 200px;
+    height: 26px;
+    line-height: 26px
+}
+
+td select {
+    width: 208px;
+    height: 32px;
+}
+
+/* textarea */
+textarea.textarea01 {
+    width: 500px;
+    height: 150px;
+    margin: 10px 0
+}
+
+.t_red {
+    color: #f55500
+}
+
+.file-upload input[type="file"] { /* 파일 필드 숨기기 */
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
+
+.file-upload label {
+    display: inline-block;
+    padding: .5em .75em;
+    color: black;
+    font-size: inherit;
+    line-height: normal;
+    vertical-align: middle;
+    background-color: #fdfdfd;
+    cursor: pointer;
+    border: 1px solid #ebebeb;
+    border-bottom-color: #e2e2e2;
+    border-radius: .25em;
+}
+
+/* named upload */
+.file-upload .upload-name {
+    display: inline-block;
+    padding: .5em .75em; /* label의 패딩값과 일치 */
+    font-size: inherit;
+    font-family: inherit;
+    line-height: normal;
+    vertical-align: middle;
+    background-color: #f5f5f5;
+    border: 1px solid #ebebeb;
+    border-bottom-color: #e2e2e2;
+    border-radius: .25em;
+    -webkit-appearance: none; /* 네이티브 외형 감추기 */
+    -moz-appearance: none;
+    appearance: none;
 }
