style : 자유게시판 제목 클릭시 index.jsp로 이동

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -173,6 +173,10 @@ textarea.textarea01 {
     appearance: none;
 }
 
+.title_link {
+    color: black;
+    text-decoration: none;
+}
 
 #search_box {
     margin: 0px 10px;
