feat : [게시판 - 보기] 댓글 표시 기능 추가 - 완료

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -86,6 +86,10 @@ html {
     padding: 15px;
 }
 
+.detail_comment_box #reg_date {
+    font-size: 12px
+}
+
 .caption {
     font-size: 14px;
     font-weight: bold;
