fix : [게시판 - 보기] 삭제 관련 기능 버그 수정 - 완료

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -246,7 +246,7 @@ form.comment_input_box button {
     border: none;
 }
 
-.post_bot_button_box button#save_btn {
+.post_bot_button_box button.check_btn {
     background-color: black;
     color: whitesmoke;
 }
