feat : [게시판 - 수정] 게시글 수정 기능 적용 - 완료
- 파일 변경시에도 해당 기능 적용됨

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -263,6 +263,19 @@ form.comment_input_box button {
     color: whitesmoke;
 }
 
+.edit_file_btn {
+    background-color: whitesmoke;
+    color: black;
+
+    border: 1px solid black;
+
+    margin: 10px 10px;
+}
+
+.edit_file_div {
+    margin: 10px 0;
+}
+
 
 #search_box {
     margin: 0px 10px;
