feat : [게시판 - 목록] 페이지 이동 구현 완료 - 완료

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -276,6 +276,15 @@ form.comment_input_box button {
     margin: 10px 0;
 }
 
+.page_div a {
+    color: black;
+}
+
+#page_select {
+    color: orange;
+    font-weight: bold;
+}
+
 
 #search_box {
     margin: 0px 10px;
